waymo-od do not work on MacbookQAQ

--- a/1.GettingStart.ipynb
+++ b/1.GettingStart.ipynb
@@ -15,7 +15,7 @@
     "from matplotlib import pyplot as plt\n",
     "#? einops is elegant and powerful in tensor operation. Check here for the tutorial -> https://einops.rocks/1-einops-basics/\n",
     "from einops import rearrange, repeat \n",
-    "from utils import  create_R, vis_world_bounds_o3d\n"
+    "from utils.base_utils import  create_R, vis_world_bounds_o3d\n"
    ]
   },
   {
