--- a/3.Intersection.ipynb
+++ b/3.Intersection.ipynb
@@ -7,7 +7,19 @@
    "outputs": [],
    "source": [
     "# Ray-AABB Intersection\n",
-    "# code from \"NeuralBody\" ->"
+    "# code from \"NeuralBody\" ->\n",
+    "import os\n",
+    "import tensorflow.compat.v1 as tf\n",
+    "import math\n",
+    "import numpy as np\n",
+    "import itertools\n",
+    "\n",
+    "tf.enable_eager_execution()\n",
+    "\n",
+    "from waymo_open_dataset.utils import range_image_utils\n",
+    "from waymo_open_dataset.utils import transform_utils\n",
+    "from waymo_open_dataset.utils import  frame_utils\n",
+    "from waymo_open_dataset import dataset_pb2 as open_dataset"
    ]
   },
   {
@@ -16,7 +28,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ray-VoxelGrid Intersection\n"
+    "# Ray-VoxelGrid Intersection\n",
+    "FILENAME = '/content/waymo-od/tutorial/frames'\n",
+    "dataset = tf.data.TFRecordDataset(FILENAME, compression_type='')\n",
+    "for data in dataset:\n",
+    "    frame = open_dataset.Frame()\n",
+    "    frame.ParseFromString(bytearray(data.numpy()))\n",
+    "    break\n",
+    "(range_images, camera_projections,\n",
+    " _, range_image_top_pose) = frame_utils.parse_range_image_and_camera_projection(\n",
+    "    frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(frame.context)"
    ]
   }
  ],
