--- a/3.Intersection.ipynb
+++ b/3.Intersection.ipynb
@@ -9,7 +9,7 @@
     "# Ray-AABB Intersection\n",
     "# code from \"NeuralBody\" ->\n",
     "import os\n",
-    "import tensorflow.compat.v1 as tf\n",
+    "import tensorflow as tf\n",
     "import math\n",
     "import numpy as np\n",
     "import itertools\n",
@@ -51,8 +51,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "urbangiraffe",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.16"
   },
   "orig_nbformat": 4
  },
